Kubernetes/db-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: redis       # mandatory 
  labels:           # arbitrary key value pairs 
    name: redis
    app: demo       # Key Value pairs that will be used by scheduler/replication controller to select appropiate pods
#    env: staging    
spec:               # Within Spec, you can have multiple contaienrs (to be deployed togther in the pod).
  containers:
    - name: redis
      image: redis:latest
      ports:
        - containerPort: 6379
          protocol: TCP
