Kubernetes/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-redis-app
  labels:
    name: flask-redis-app
    app: demo
spec:
  selector:
    name: flask-redis-app 
  type: NodePort
  ports:
   - port: 80
     targetPort: 5000
     protocol: TCP
