Kubernetes/fanout-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
    - paths: /echo
      backend:
        serviceName: nginx
        servicePort: 80
    - path: /
      backend:
        serviceName: flask-redis-app
